--- a/Presentation/Views/_ViewImports.cshtml
+++ b/Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using SeniorConnect
-@using SeniorConnect.Models
+@using SeniorConnect.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
