--- a/Web/Views/GroupChat/Overview.cshtml
+++ b/Web/Views/GroupChat/Overview.cshtml
@@ -2,7 +2,7 @@
 @model Web.DTO.GroupChat.GroupChatDTO
 
 @{
-Layout = null;
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -60,7 +60,7 @@ Layout = null;
             overflow-y: auto;
         }
         .chat-message {
-            margin-bottom: 20px;
+            margin-bottom: 40px;
         }
         .chat-message img {
             border-radius: 50%;
@@ -90,7 +90,6 @@ Layout = null;
         .chat-message {
             display: flex;
             align-items: center;
-            margin-bottom: 10px;
         }
         .message {
             margin-left: 10px;
@@ -168,31 +167,32 @@ Layout = null;
         <div class="col-md-4 conversations">
             @foreach (ChatDTO chat in Model.Chats)
             {
-            <div class="conversation-item">
-                <img src="@(@chat.Image ?? "https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png?20150327203541")" alt="">
-                <div>
-                    <div class="name">@chat.Name</div>
-                    <div class="message">@chat.LastMessage?.Text</div>
+                <div class="conversation-item">
+                    <img src="@(@chat.Image ?? "https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png?20150327203541")" alt="">
+                    <div>
+                        <div class="name">@chat.Name</div>
+                        <div class="message">@chat.LastMessage?.Text</div>
+                    </div>
+                    <div class="time">@chat.LastMessage?.Time</div>
                 </div>
-                <div class="time">@chat.LastMessage?.Time</div>
-            </div>
             }
         </div>
 
         <div class="col-md-8 chat-area">
-            @if (Model.Chats.Any())
-            {
             <div class="chat-messages">
-                @foreach (MessageDTO message in Model.Messages)
+
+                @if (Model.Chats.Any())
                 {
-                <div class="chat-message d-flex @((message.User.Id == Model.User.Id ? "flex-row-reverse" : ""))">
-                    <img src="@(@message.User.ProfileImageUrl ?? "https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png?20150327203541")" alt="">
-                    <div class="message">@message.Text</div>
-                    <div class="time">@message.Time</div>
-                </div>
+                    @foreach (MessageDTO message in Model.Messages)
+                    {
+                        <div class="chat-message d-flex @((message.User.Id == Model.User.Id ? "flex-row-reverse" : ""))">
+                            <img src="@(@message.User.ProfileImageUrl ?? "https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png?20150327203541")" alt="">
+                            <div class="message">@message.Text</div>
+                            <div class="time">@message.Time</div>
+                        </div>
+                    }
                 }
             </div>
-            }
             <div class="chat-input">
                 <input type="text" placeholder="Start typing to reply...">
             </div>
@@ -202,6 +202,11 @@ Layout = null;
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+<script>
+    $(document).ready(function() {
+        var chatMessages = $(".chat-messages");
+        chatMessages.scrollTop(chatMessages[0].scrollHeight);
+    });
+</script>
 </body>
 </html>
