--- a/Web/Views/GroupChat/Overview.cshtml
+++ b/Web/Views/GroupChat/Overview.cshtml
@@ -194,7 +194,7 @@
                 }
             </div>
             <div class="chat-input">
-                <input type="text" placeholder="Start typing to reply...">
+                <input id="chatInput" type="text" placeholder="Start typing to reply...">
             </div>
         </div>
     </div>
@@ -206,6 +206,34 @@
     $(document).ready(function() {
         var chatMessages = $(".chat-messages");
         chatMessages.scrollTop(chatMessages[0].scrollHeight);
+    });
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function() {
+        var chatMessages = $(".chat-messages");
+        chatMessages.scrollTop(chatMessages[0].scrollHeight);
+
+        $("#chatInput").keypress(function(event) {
+            if (event.which === 13) {
+                event.preventDefault();
+                var message = $(this).val();
+                if (message.trim() !== "") {
+                    $.ajax({
+                        url: '/GroupChat/Test',
+                        type: 'POST',
+                        contentType: 'application/json',
+                        data: JSON.stringify({ text: message }),
+                        success: function(response) {
+                            $("#chatInput").val(""); 
+                        },
+                        error: function(error) {
+                            console.error("Error posting message:", error);
+                        }
+                    });
+                }
+            }
+        });
     });
 </script>
 </body>
