--- a/Web/Views/GroupChat/Overview.cshtml
+++ b/Web/Views/GroupChat/Overview.cshtml
@@ -179,24 +179,13 @@
         </div>
 
         <div class="col-md-8 chat-area">
-            <div class="chat-messages">
-
-                @if (Model.Chats.Any())
-                {
-                    @foreach (MessageDTO message in Model.Messages)
-                    {
-                        <div class="chat-message d-flex @((message.User.Id == Model.User.Id ? "flex-row-reverse" : ""))">
-                            <img src="@(@message.User.ProfileImageUrl ?? "https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png?20150327203541")" alt="">
-                            <div class="message">@message.Text</div>
-                            <div class="time">@message.Time</div>
-                        </div>
-                    }
-                }
+            <div class="chat-messages" id="chatMessagesContainer">
+                @await Html.PartialAsync("_ChatMessagesPartial", Model)
             </div>
             @using (Html.BeginForm("SendMessage", "GroupChat", FormMethod.Post, new { id = "chatForm" }))
             {
                 <div class="chat-input">
-                    <input type="hidden" name="groupChatId" value="@Model.Id"/>
+                    <input type="hidden" name="groupChatId" value="@Model.Id" id="groupChatId"/>
                     <input id="chatInput" type="text" name="message" placeholder="Start typing to reply...">
                 </div>
             }
@@ -215,16 +204,48 @@
 </script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-        $(document).ready(function () {
+    $(document).ready(function() {
+        var chatMessages = $(".chat-messages");
+        var initialScroll = true;  // Flag to check if initial scroll has been done
+        chatMessages.scrollTop(chatMessages[0].scrollHeight);
+        $("#chatInput").focus();
+
+        $("#chatForm").on("submit", function (event) {
+            event.preventDefault();
+            var form = $(this);
+            $.ajax({
+                url: form.attr("action"),
+                type: form.attr("method"),
+                data: form.serialize(),
+                success: function (data) {
+                    $("#chatMessagesContainer").html(data);
+                    $("#chatInput").val("").focus();
+                    chatMessages.scrollTop(chatMessages[0].scrollHeight);
+                }
+            });
+        });
+
         $("#chatInput").keypress(function (event) {
-            if (event.which === 13) {  
+            if (event.which === 13) {
                 event.preventDefault();
-                var message = $(this).val();
-                if (message.trim() !== "") {
+                if ($(this).val().trim() !== "") {
                     $("#chatForm").submit();
                 }
             }
         });
+
+        function loadChatMessages() {
+            var groupChatId = $("#groupChatId").val();
+            $.get("/GroupChat/LoadChatMessages", { groupChatId: groupChatId }, function (data) {
+                $("#chatMessagesContainer").html(data);
+                if (initialScroll) {
+                    initialScroll = false;
+            
+                }
+            });
+        }
+
+        setInterval(loadChatMessages, 1500);
     });
 </script>
 </body>
